fix z-index

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -6,6 +6,11 @@
     height: 150px;
     border-radius: 50%;
     border: 2px solid gray;
+    z-index: -9999;
+}
+
+.card-index {
+    z-index: -9999;
 }
 
 .img-contact {
